--- a/EatLess.Api/EatLess.Api.csproj
+++ b/EatLess.Api/EatLess.Api.csproj
@@ -7,7 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EatLess.Infrastructure\EatLess.Infrastructure.csproj" />
+    <ProjectReference Include="..\EatLess.Presentation\EatLess.Presentation.csproj" />
   </ItemGroup>
 
 </Project>
