--- a/EatLess.Infrastructure/EatLess.Infrastructure.csproj
+++ b/EatLess.Infrastructure/EatLess.Infrastructure.csproj
@@ -7,21 +7,31 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="bin\**" />
     <Compile Remove="obj\**" />
-    <EmbeddedResource Remove="bin\**" />
     <EmbeddedResource Remove="obj\**" />
-    <None Remove="bin\**" />
     <None Remove="obj\**" />
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="bin\Debug\net8.0\EatLess.Infrastructure.deps.json" />
+    <Content Include="bin\Debug\net8.0\EatLess.Infrastructure.runtimeconfig.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Configurations\" />
-    <Folder Include="Migrations\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="bin\Debug\net8.0\EatLess.Domain.dll" />
+    <None Include="bin\Debug\net8.0\EatLess.Domain.pdb" />
+    <None Include="bin\Debug\net8.0\EatLess.Infrastructure.dll" />
+    <None Include="bin\Debug\net8.0\EatLess.Infrastructure.pdb" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
