Add CQRS Pattern to application layer

--- a/EatLess.Api/EatLess.Api.csproj
+++ b/EatLess.Api/EatLess.Api.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\EatLess.Application\EatLess.Application.csproj" />
     <ProjectReference Include="..\EatLess.Infrastructure\EatLess.Infrastructure.csproj" />
     <ProjectReference Include="..\EatLess.Presentation\EatLess.Presentation.csproj" />
   </ItemGroup>
