--- a/EatLess.Domain/EatLess.Domain.csproj
+++ b/EatLess.Domain/EatLess.Domain.csproj
@@ -15,6 +15,10 @@
     <None Remove="obj\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.4.1" />
+  </ItemGroup>
+
   
 
 </Project>
