Add Jwt Authentication

--- a/EatLess.Api/appsettings.json
+++ b/EatLess.Api/appsettings.json
@@ -8,5 +8,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=EatLess;Trusted_Connection=True;TrustServerCertificate=True"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Issuer": "Gatherly",
+    "Audience": "Gatherly",
+    "SecretKey": "super-secret-key-value-which-has-to-be-so-long!"
+  }
 }
