--- a/EatLess.Infrastructure/EatLess.Infrastructure.csproj
+++ b/EatLess.Infrastructure/EatLess.Infrastructure.csproj
@@ -1,34 +1,29 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
   <ItemGroup>
     <Compile Remove="obj\**" />
     <EmbeddedResource Remove="obj\**" />
     <None Remove="obj\**" />
   </ItemGroup>
-
   <ItemGroup>
     <Content Include="bin\Debug\net8.0\EatLess.Infrastructure.deps.json" />
     <Content Include="bin\Debug\net8.0\EatLess.Infrastructure.runtimeconfig.json" />
   </ItemGroup>
-
   <ItemGroup>
     <Folder Include="Configurations\" />
   </ItemGroup>
-
   <ItemGroup>
     <None Include="bin\Debug\net8.0\EatLess.Domain.dll" />
     <None Include="bin\Debug\net8.0\EatLess.Domain.pdb" />
     <None Include="bin\Debug\net8.0\EatLess.Infrastructure.dll" />
     <None Include="bin\Debug\net8.0\EatLess.Infrastructure.pdb" />
   </ItemGroup>
-
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.0">
@@ -37,9 +32,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.0" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\EatLess.Domain\EatLess.Domain.csproj" />
   </ItemGroup>
-
 </Project>
