Add aspnet core identity tables

--- a/EatLess.Api/appsettings.json
+++ b/EatLess.Api/appsettings.json
@@ -2,7 +2,9 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.Hosting.Lifetime": "Trace",
+      "Microsoft.AspNetCore.Authentication": "Information"
     }
   },
   "ConnectionStrings": {
@@ -10,8 +12,8 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "Issuer": "Gatherly",
-    "Audience": "Gatherly",
+    "Issuer": "EatLess",
+    "Audience": "EatLess",
     "SecretKey": "super-secret-key-value-which-has-to-be-so-long!"
   }
 }
