--- a/EatLess.Domain/EatLess.Domain.csproj
+++ b/EatLess.Domain/EatLess.Domain.csproj
@@ -14,5 +14,6 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MediatR" Version="12.4.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.0" />
   </ItemGroup>
 </Project>
